[gd_scene load_steps=16 format=3 uid="uid://by4fsuj02uyb3"]

[ext_resource type="Script" uid="uid://7uicahbwx5vb" path="res://scripts/antichamber.gd" id="1_2o6r5"]
[ext_resource type="Script" uid="uid://bdclx4q3c332j" path="res://scripts/player.gd" id="1_f3sb7"]
[ext_resource type="PackedScene" uid="uid://loidsa645j6i" path="res://meshes/Hall-BeforeStairs.glb" id="2_fj7yv"]
[ext_resource type="PackedScene" uid="uid://mpqe1akw3sgh" path="res://meshes/Hall-BeforeStairs-Outline.glb" id="3_ioo17"]
[ext_resource type="PackedScene" uid="uid://cjxdjqx2jg68m" path="res://meshes/adjusted/stairs_red.tscn" id="6_pkg7o"]
[ext_resource type="PackedScene" uid="uid://d4mwke054j2jp" path="res://meshes/adjusted/stairs_blue.tscn" id="7_gbfbk"]
[ext_resource type="PackedScene" uid="uid://c88dwy3xkhxmj" path="res://meshes/Hall-AfterStairs.glb" id="8_70uel"]
[ext_resource type="PackedScene" uid="uid://dg8u30dpogytq" path="res://meshes/Hall-Win.glb" id="8_ioo17"]
[ext_resource type="PackedScene" uid="uid://bwox38sbk15lq" path="res://meshes/Hall-AfterStairs-Outline.glb" id="9_hiqwa"]
[ext_resource type="PackedScene" uid="uid://bxbrle74hc0x7" path="res://meshes/Hall-Win-Outline.glb" id="9_wse8f"]
[ext_resource type="PackedScene" uid="uid://dl3qjl3fwwvlm" path="res://components/portal_prefab.tscn" id="11_ic0uy"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_f3sb7"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_fj7yv"]
sky_material = SubResource("ProceduralSkyMaterial_f3sb7")

[sub_resource type="Environment" id="Environment_tlwt5"]
background_mode = 2
sky = SubResource("Sky_fj7yv")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
tonemap_mode = 2
ssao_radius = 0.2
glow_enabled = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f3sb7"]
radius = 0.375
height = 1.5

[node name="World" type="Node3D"]
script = ExtResource("1_2o6r5")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tlwt5")

[node name="Hall-BeforeStairs" parent="." instance=ExtResource("2_fj7yv")]

[node name="Hall-BeforeStairs-Outline" parent="Hall-BeforeStairs" instance=ExtResource("3_ioo17")]

[node name="After_Blue" parent="." instance=ExtResource("8_70uel")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.4, 2.2, 1.1)

[node name="Hall-AfterStairs-Outline" parent="After_Blue" instance=ExtResource("9_hiqwa")]

[node name="After_Red" parent="." instance=ExtResource("8_70uel")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.4, -2.2, -1)

[node name="Hall-AfterStairs-Outline" parent="After_Red" instance=ExtResource("9_hiqwa")]

[node name="StairsRed" parent="." instance=ExtResource("6_pkg7o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 1, -0.1)

[node name="Light_Red" type="OmniLight3D" parent="StairsRed"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0843084, 0.0581009, -1.03272)
light_color = Color(0, 1, 1, 1)
light_energy = 0.999
light_negative = true
light_bake_mode = 1
shadow_enabled = true
omni_range = 2.13
omni_attenuation = -3.149

[node name="Light_Magenta" type="OmniLight3D" parent="StairsRed"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0843084, 0.0581009, -1.03272)
light_color = Color(0, 0.596078, 0, 1)
light_energy = 7.838
light_negative = true
light_bake_mode = 1
shadow_enabled = true
omni_range = 2.13
omni_attenuation = -0.639

[node name="Light_Red2" type="OmniLight3D" parent="StairsRed"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.38121, -2.2419, -0.832723)
light_color = Color(0, 1, 1, 1)
light_energy = 1.564
light_negative = true
light_bake_mode = 1
shadow_enabled = true
omni_range = 2.13
omni_attenuation = -3.149

[node name="Stairs_Blue" parent="." instance=ExtResource("7_gbfbk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 1, 2)

[node name="Light_Blue3" type="OmniLight3D" parent="Stairs_Blue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0843081, 0.0581009, -1.03272)
light_color = Color(1, 1, 0, 1)
light_energy = 0.937
light_negative = true
light_bake_mode = 1
shadow_enabled = true
omni_range = 2.13
omni_attenuation = -3.149

[node name="Light_Cyan" type="OmniLight3D" parent="Stairs_Blue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0843081, 0.0581009, -1.03272)
light_color = Color(1, 0.415686, 0, 1)
light_energy = 1.564
light_negative = true
light_bake_mode = 1
shadow_enabled = true
omni_range = 2.13
omni_attenuation = -3.149

[node name="Light_Blue4" type="OmniLight3D" parent="Stairs_Blue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.38121, 2.1581, -0.832723)
light_color = Color(1, 1, 0, 1)
light_energy = 1.564
light_negative = true
light_bake_mode = 1
shadow_enabled = true
omni_range = 2.13
omni_attenuation = -3.149

[node name="Hall-Win" parent="." instance=ExtResource("8_ioo17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 7)

[node name="Hall-Win-Outline" parent="Hall-Win" instance=ExtResource("9_wse8f")]

[node name="WinIndicator" type="Node3D" parent="Hall-Win"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1, 2.1)

[node name="GreenLight" type="OmniLight3D" parent="Hall-Win/WinIndicator"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.412657)
light_color = Color(1, 0, 1, 1)
light_energy = 1.806
light_negative = true
omni_range = 3.57778
omni_attenuation = -1.25

[node name="Label3D" type="Label3D" parent="Hall-Win/WinIndicator"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 2.8)
text = "YOU WIN!!!"

[node name="Player" type="CharacterBody3D" parent="." node_paths=PackedStringArray("camera")]
transform = Transform3D(1, 0, -1.58933e-08, 0, 1, 0, 1.58933e-08, 0, 1, -4.42657, 1.05097, 10.9577)
collision_layer = 32769
floor_max_angle = 0.872665
script = ExtResource("1_f3sb7")
camera = NodePath("Camera3D")
SPEED = 3.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_f3sb7")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
near = 0.001

[node name="StairsPortal" parent="." node_paths=PackedStringArray("exit_portal") instance=ExtResource("11_ic0uy")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -6, 1, 3)
exit_portal = NodePath("../StartPortal")

[node name="StartPortal" parent="." node_paths=PackedStringArray("exit_portal") instance=ExtResource("11_ic0uy")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1, 6.9)
exit_portal = NodePath("../StairsPortal")

[node name="BluePortal" parent="." node_paths=PackedStringArray("exit_portal") instance=ExtResource("11_ic0uy")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 3.2, 2.1)
exit_portal = NodePath("../StairsPortal")

[node name="RedPortal" parent="." node_paths=PackedStringArray("exit_portal") instance=ExtResource("11_ic0uy")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, -1.2, -2.38419e-07)
exit_portal = NodePath("../StairsPortal")

[connection signal="on_teleport" from="BluePortal" to="." method="_on_blue_portal_on_teleport"]
[connection signal="on_teleport" from="RedPortal" to="." method="_on_red_portal_on_teleport"]
